Disable PrimarySelection in seat setPrimarySelection

BUG: 456167