src/wayland/seat_interface_p.h
@@ -67,6 +67,7 @@ public:
     // the last thing copied into the clipboard content
     AbstractDataSource *currentSelection = nullptr;
     AbstractDataSource *currentPrimarySelection = nullptr;
+    bool primarySelectionEnabled = true;
 
     // Pointer related members
     struct Pointer
